# FarFarWest-Save-Transfer

./: .gitignore  LICENSE  README.md  README_FarFarWest_Save_Transfer.md  Run FarFarWest Transfer UI.bat  Transfer FarFarWest Save.bat  build_release.ps1  ffw_save_transfer.py  ffw_save_transfer_gui.py  requirements.txt
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/FarFarWestSaveStudio/: App.xaml  App.xaml.cs  FarFarWestSaveStudio.csproj  MainWindow.xaml  MainWindow.xaml.cs  SaveCore.cs
