[package]
name = "far-far-west-save-studio"
version = "2.2.0"
description = "Far Far West Save Studio"
authors = ["Extrautior"]
edition = "2021"

[lib]
name = "far_far_west_save_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "FarFarWestSaveStudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["alloc"] }
md-5 = "0.10"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
urlencoding = "2"
winreg = "0.55"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
